# Bumper-Bot

./: README.md
bumperbot_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
bumperbot_controller/config/: bumperbot_controllers.yaml  twist_mux_topics.yaml
bumperbot_description/launch/: gazebo.launch.py
bumperbot_description/meshes/: pi_camera.STL
bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro
bumperbot_motion/: CMakeLists.txt  motion_planner_plugins.xml  package.xml
bumperbot_motion/include/bumperbot_motion/: nav2_pd_motion_planner.hpp  nav2_pure_pursuit.hpp  pd_motion_planner.hpp  pure_pursuit.hpp
bumperbot_motion/src/: nav2_pd_motion_planner.cpp  nav2_pure_pursuit.cpp  pd_motion_planner.cpp  pure_pursuit.cpp
bumperbot_navigation/: CMakeLists.txt  global_planner_plugin.xml  package.xml
bumperbot_navigation/config/: bt_navigator.yaml  controller_server.yaml  planner_server.yaml
bumperbot_navigation/include/bumperbot_navigation/: a_star_planner.hpp  dijkstra_planner.hpp  dijkstra_planner_costmap.hpp  nav2_a_star_planner.hpp  nav2_dijkstra_planner.hpp
bumperbot_navigation/launch/: navigation.launch.py
bumperbot_navigation/src/: a_star_planner.cpp  a_star_planner_costmap.cpp  dijkstra_planner.cpp  dijkstra_planner_costmap.cpp  nav2_a_star_planner.cpp  nav2_dijkstra_planner.cpp
bumperbot_planning/: CMakeLists.txt  global_planner_plugin.xml  global_planner_plugins.xml  package.xml
bumperbot_planning/bumperbot_planning/: a_star_costmap_planner.py  dijkstra_costmap_planner.py
bumperbot_planning/include/bumperbot_planning/: nav2_a_star_planner.hpp  nav2_dijkstra_planner.hpp
bumperbot_planning/include/bumperbot_planning/motion_planning/: pd.hpp  pure_pursuit.hpp
bumperbot_planning/src/: a_star_costmap_planner.cpp  a_star_planner.cpp  dijkstra_costmap_planner.cpp  dijkstra_planner.cpp  nav2_a_star_planner.cpp  nav2_dijkstra_planner.cpp
bumperbot_planning/src/motion_planning/: pd.cpp  pure_pursuit.cpp
bumperbot_planning/src/path_planning/: a_star_planner.cpp  a_star_planner_costmap.cpp  dijkstra_planner.cpp  dijkstra_planner_costmap.cpp  nav2_a_star_planner.cpp  nav2_dijkstra_planner.cpp
bumperbot_vision/: CMakeLists.txt  package.xml
bumperbot_vision/config/: rtabmap.yaml
bumperbot_vision/launch/: rtab_map.launch.py
